--- a/Gaussian Distributions.ipynb
+++ b/Gaussian Distributions.ipynb
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa18858e9b0>]"
+       "[<matplotlib.lines.Line2D at 0x7fab2b596438>]"
       ]
      },
      "execution_count": 4,
@@ -260,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53e3bd9da2c14dc78214a38c714146b5",
+       "model_id": "36c5f94c3d0942f78e79c9f3ce7c0f1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd0b94d9013947e0938cc2c6e0aff1d2",
+       "model_id": "392d5a2dd8e844b9ab72f513540d663e",
        "version_major": 2,
        "version_minor": 0
       },
